# elm-wire3-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
elm-harness/: elm.json  harness.js  runner.js
elm-harness/elm-stuff/0.19.1/: Harness.elmi  Harness.elmo  TestTypes.elmi  TestTypes.elmo
elm-harness/src/: Harness.elm  TestTypes.elm
examples/tasks/: Cargo.toml  build.sh
examples/tasks/elm/: elm.json
examples/tasks/elm/src/: Main.elm  Messages.elm
examples/tasks/src/: main.rs  messages.rs
examples/tasks/static/: index.html
js/: wire3-ws.js
src/: lib.rs  main.rs  types.rs
src/codegen/: mod.rs  rust_codegen.rs
src/parser/: elm_parser.rs  mod.rs
src/wire3/: decode.rs  encode.rs  hex.rs  mod.rs  types.rs
tests/: fuzz_codegen.rs  fuzz_round_trip.rs  fuzz_wire3_types.rs  reverse_round_trip.rs  round_trip.rs
tests/common/: mod.rs  type_gen.rs
