[package]
name = "elm-wire3-rs"
version = "0.1.0"
edition = "2024"
description = "Wire3 binary codec for Rust, matching Lamdera's Wire3.elm format. Parse Elm types, generate Rust structs with encode/decode, communicate over WebSocket."
license = "MIT"
repository = "https://github.com/sjalq/elm-wire3-rs"
keywords = ["elm", "lamdera", "wire3", "codec", "websocket"]
categories = ["encoding", "web-programming"]

[dependencies]
tree-sitter = "0.25"
tree-sitter-elm = "5.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
proptest = "1"
rand = "0.9"
